# rocky-pet

./: README.md  pyproject.toml  rocky.spec
src/rocky_pet/: app.py  audio.py  bubble_widget.py  content.py  engine.py  main.py  panel_widget.py  rocky_widget.py  settings.py  sprites.py  tray.py
tests/: conftest.py  test_audio.py  test_content.py  test_engine.py  test_settings.py
