[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "rocky-pet"
version = "0.1.0"
description = "Rocky desktop pet from Project Hail Mary"
requires-python = ">=3.12"
dependencies = [
    "PyQt6>=6.6",
    "numpy>=1.26",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pyinstaller>=6.0",
]

[project.scripts]
rocky-pet = "rocky_pet.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
